testdata/baselines/reference/submodule/conformance/nodeModulesResolveJsonModule(module=nodenext).errors.txt
index.cts(5,33): error TS2339: Property 'name' does not exist on type 'string'.


==== index.ts (0 errors) ====
    import pkg from "./package.json" with { type: "json" };
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
    export const thing = ns;
    export const name2 = ns.default.name;
==== index.cts (1 errors) ====
    import pkg from "./package.json";
    export const name = pkg.name;
    import * as ns from "./package.json";
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.mts (0 errors) ====
    import pkg from "./package.json" with { type: "json" };
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
    export const thing = ns;
    export const name2 = ns.default.name;
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "type": "module",
        "default": "misedirection"
    }